# GeneSetRefinement

./: README.md  pyproject.toml  run_unit_tests.sh  unit_tests.py
examples/: generate_reactome-erbb2-60.py
examples/example_results/: reactome-erbb2-60_k23_o2_i2_s49_24q4.pickle
examples/input_gene_sets/: REACTOME_SIGNALING_BY_ERBB2_v6.0.gmt
src/GeneSetRefinement/: ComponentCluster.py  Data2D.py  Expression.py  GeneComponentIC.py  GeneSet.py  InnerIteration.py  NMFResult.py  PhenotypeComponentIC.py  Phenotypes.py  Refinement.py  RefinementObject.py  Utils.py  __init__.py
