[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GeneSetRefinement"
dynamic = ["version"]

authors = [
	{name = "Alexander T. Wenzel", email = "atwenzel@ucsd.edu"}
]

dependencies = [
	"pandas==2.2.2",
	"typing_extensions==4.11.0",
	"genepattern-python==22.10",
	"numpy==1.24.3",
	"scikit-learn==1.3.2",
	"scipy==1.10.1"
]

description = "A Python package implementing Gene Set Refinement."

readme = "README.md"

requires-python = ">=3.10.0"

[tool.setuptools.dynamic]
version = {attr = "GeneSetRefinement.__version__"}