[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GeneSetRefinement"
dynamic = ["version"]

authors = [
	{name = "Alexander T. Wenzel", email = "atwenzel@ucsd.edu"}
]

dependencies = [
	"setuptools>=80.0.0",
	"pandas==2.2.2",
	"typing_extensions==4.11.0",
	"genepattern-python==22.10",
	"numpy>=1.26.4",
	"scikit-learn>=1.7.0",
	"scipy>=1.16.0",
	"psutil>=7.0.0"
]

description = "A Python package implementing Gene Set Refinement."

readme = "README.md"

requires-python = ">=3.10.0"

[tool.setuptools.dynamic]
version = {attr = "GeneSetRefinement.__version__"}